--- a/package.json
+++ b/package.json
@@ -8,51 +8,37 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
-    "copy-webpack-plugin": "4.3.1",
-    "css-hot-loader": "1.3.6",
-    "css-loader": "0.28.9",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "2.30.1",
-    "node-sass": "^4.9.0",
-    "rimraf": "2.6.2",
-    "sass-loader": "6.0.6",
-    "source-list-map": "2.0.0",
-    "style-loader": "0.20.1",
-    "uglify-js": "3.3.9",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.11.1"
+    "react-scripts": "^3.0.1"
   },
   "dependencies": {
     "bootstrap": "4.0.0",
-    "chart.js": "^2.7.2",
-    "core-js": "^2.5.7",
-    "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
-    "history": "4.7.2",
+    "node-sass": "^4.12.0",
     "react": "16.2.0",
-    "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
-    "reactstrap": "5.0.0-beta",
-    "simple-line-icons": "2.4.1"
+    "reactstrap": "5.0.0-beta"
   },
   "scripts": {
-    "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
-    "start": "webpack-dev-server --progress --color --inline --env.dev",
-    "build": "webpack -p --progress --env.prod",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "clean": "rimraf ./build"
   },
   "engines": {
     "node": ">= 8.9.4",
     "npm": ">= 5.6.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
