--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^3.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.3",
+    "react-scripts": "^3.0.1",
     "source-map-explorer": "^1.8.0"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "classnames": "^2.2.6",
     "font-awesome": "4.7.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
