--- a/package.json
+++ b/package.json
@@ -4,31 +4,30 @@
   "author": "Pubudu Dodangoda",
   "license": "MIT",
   "private": true,
-  "devDependencies": {
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-babel": "^5.2.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.3",
-    "react-scripts": "^3.0.1",
-    "source-map-explorer": "^1.8.0"
-  },
-  "dependencies": {
-    "bootstrap": "4.0.0",
-    "classnames": "^2.2.6",
-    "font-awesome": "4.7.0",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-router-dom": "4.2.2",
-    "react-transition-group": "2.2.1",
-    "reactstrap": "5.0.0-beta"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src --fix "
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.14.3",
+    "react-scripts": "^3.0.1",
+    "source-map-explorer": "^2.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
