Enforce self closing tags

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     ],
     "no-var": "error",
     "prefer-const": "error",
-    "prefer-template": "error"
+    "prefer-template": "error",
+    "react/self-closing-comp": "error"
   }
 }
