Simplify the Sidebar
Remove complexity, convert getters to components, merge functions, remove unwanted functions

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "no-var": "error",
     "prefer-const": "error",
     "prefer-template": "error",
-    "react/self-closing-comp": "error"
+    "react/self-closing-comp": "error",
+    "react/prop-types": "off"
   }
 }
