--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "font-awesome": "^4.7.0",
     "machan": "^0.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "reactstrap": "^8.0.0"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "eslint-config-prettier": "^4.3.0",
